--- a/PalmEngine.vcxproj
+++ b/PalmEngine.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\logging\Logger.cpp" />
-    <ClCompile Include="src\graphics\gui_controls\EditablePanel.cpp" />
-    <ClCompile Include="src\graphics\gui_controls\Frame.cpp" />
-    <ClCompile Include="src\graphics\gui_controls\Panel.cpp" />
+    <ClCompile Include="src\window\EditablePanel.cpp" />
+    <ClCompile Include="src\window\Frame.cpp" />
+    <ClCompile Include="src\window\Panel.cpp" />
     <ClCompile Include="src\graphics\GraphicModule.cpp" />
     <ClCompile Include="src\input\InputCollector.cpp" />
     <ClCompile Include="src\input\InputMapper.cpp" />
@@ -30,13 +30,14 @@
     <ClCompile Include="src\Palm_Client.cpp" />
     <ClCompile Include="src\ModuleManager.cpp" />
     <ClCompile Include="src\Modules.cpp" />
+    <ClCompile Include="src\graphics\SwapChain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\logging\Logger.h" />
-    <ClInclude Include="src\graphics\gui_controls\EditablePanel.h" />
-    <ClInclude Include="src\graphics\gui_controls\Frame.h" />
+    <ClInclude Include="src\window\EditablePanel.h" />
+    <ClInclude Include="src\window\Frame.h" />
     <ClInclude Include="src\Modules.h" />
-    <ClInclude Include="src\graphics\gui_controls\Panel.h" />
+    <ClInclude Include="src\window\Panel.h" />
     <ClInclude Include="src\graphics\GraphicModule.h" />
     <ClInclude Include="src\input\InputCollector.h" />
     <ClInclude Include="src\input\InputMapper.h" />
@@ -44,6 +45,7 @@
     <ClInclude Include="src\IModule.h" />
     <ClInclude Include="src\ModuleEvent.h" />
     <ClInclude Include="src\ModuleManager.h" />
+    <ClInclude Include="src\graphics\SwapChain.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
