--- a/PalmEngine.vcxproj.filters
+++ b/PalmEngine.vcxproj.filters
@@ -15,28 +15,25 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="engine\logger\Logger.cpp">
+    <ClCompile Include="engine\logging\LogManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="include\glad\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="engine\resource_manager\ResourceManager.cpp">
+    <ClCompile Include="engine\filesystem\ResourceManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="engine\input\InputModule.cpp">
+    <ClCompile Include="engine\input\InputManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="engine\ModuleManager.cpp">
+    <ClCompile Include="engine\PalmEngineRoot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="engine\Modules.cpp">
+    <ClCompile Include="game\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="engine\PalmEngine.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="engine\rendering\RenderModule.cpp">
+    <ClCompile Include="engine\rendering\RenderManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="engine\rendering\Shader.cpp">
@@ -51,27 +48,30 @@
     <ClCompile Include="game\Test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="engine\entity\Entity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\entity\EntityManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="engine\logger\Logger.h">
+    <ClInclude Include="engine\logging\LogManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="engine\resource_manager\ResourceManager.h">
+    <ClInclude Include="engine\filesystem\ResourceManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="engine\rendering\RenderModule.h">
+    <ClInclude Include="engine\rendering\RenderManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="engine\IModule.h">
+    <ClInclude Include="engine\PalmEngineManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="engine\ModuleManager.h">
+    <ClInclude Include="engine\PalmEngineRoot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="engine\Modules.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="engine\input\InputModule.h">
+    <ClInclude Include="engine\input\InputManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="engine\rendering\Shader.h">
@@ -86,7 +86,13 @@
     <ClInclude Include="include\stb\stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="engine\PalmEngineConfig.h">
+    <ClInclude Include="engine\entity\Entity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\entity\EntityManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\PalmEngineSingleton.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
