Simplified Entity, Added Transform component, Changed way of rendering Model

--- a/PalmEngine.vcxproj
+++ b/PalmEngine.vcxproj
@@ -28,12 +28,13 @@
     <ClCompile Include="engine\rendering\Model.cpp" />
     <ClCompile Include="engine\rendering\RenderManager.cpp" />
     <ClCompile Include="engine\rendering\Shader.cpp" />
-    <ClCompile Include="engine\Entity.cpp" />
+    <ClCompile Include="engine\entity\Entity.cpp" />
     <ClCompile Include="engine\scene\SceneManager.cpp" />
     <ClCompile Include="include\glad\glad.c" />
     <ClCompile Include="engine\logging\LogManager.cpp" />
     <ClCompile Include="engine\filesystem\ResourceManager.cpp" />
-    <ClCompile Include="engine\rendering\Material.cpp" />
+    <ClCompile Include="engine\entity\Transform.cpp" />
+    <ClCompile Include="engine\rendering\Renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine\PalmEngineConfig.h" />
@@ -48,10 +49,11 @@
     <ClInclude Include="engine\rendering\Shader.h" />
     <ClInclude Include="engine\filesystem\ResourceManager.h" />
     <ClInclude Include="engine\logging\LogManager.h" />
-    <ClInclude Include="engine\Entity.h" />
+    <ClInclude Include="engine\entity\Entity.h" />
     <ClInclude Include="engine\scene\SceneManager.h" />
     <ClInclude Include="include\stb\stb_image.h" />
-    <ClInclude Include="engine\rendering\Material.h" />
+    <ClInclude Include="engine\entity\Transform.h" />
+    <ClInclude Include="engine\rendering\Renderer.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
